<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="32dp">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                >

                <TextView
                    android:text="@string/nombre"
                    style="@style/text_label" />

                <EditText
                    android:id="@+id/nombre"
                    android:inputType="text"
                    android:hint="@string/nombre"
                    style="@style/text_input" />

                <TextView
                    android:text="Tipo de DB"
                    style="@style/text_label" />

                <Spinner
                    style="@style/spinner"
                    android:id="@+id/tipo"
                    android:entries="@array/tipo_db" />


                <TextView
                    android:text="Propietario"
                    style="@style/text_label" />

                <EditText
                    android:id="@+id/propietario"
                    android:inputType="text"
                    android:hint="Propietario"
                    style="@style/text_input" />


                <TextView
                    android:text="Descripcion"
                    style="@style/text_label" />

                <EditText
                    android:id="@+id/descripcion"
                    android:inputType="text"
                    android:hint="Descripcion"
                    style="@style/text_input" />


                <TextView
                    android:text="Tamano Mb"
                    style="@style/text_label" />

                <EditText
                    android:id="@+id/tamano_mb"
                    android:inputType="number"
                    android:hint="Tamano Mb"
                    style="@style/text_input" />


                <TextView
                    android:text="Estado"
                    style="@style/text_label" />

                <Spinner
                    style="@style/spinner"
                    android:id="@+id/estado"
                    android:entries="@array/estado_db" />


                <Button
                    android:id="@+id/save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/guardar" />

                <Button
                    android:id="@+id/delete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/red"
                    android:text="@string/borrar" />
            </LinearLayout>
        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>